--- a/templates/pacientes/consultar.html
+++ b/templates/pacientes/consultar.html
@@ -83,8 +83,8 @@
                     <th>{{paciente.nascimento|default:''|date:'d/m/Y'}}</th>
                     <th>{{paciente.familia|default:''}}</th>
                     <th>
-                        <a href ="editar/{{paciente.id}}"><span title="Editar"><i class="fas fa-edit"></i></span></a>
-                        <a href="transferir/{{paciente.id}}" class="delete-btn"><span title="Transferir"><i class="fas fa-minus-circle"></i></span></a>
+                        <a href ="#"><span title="Editar"><i class="fas fa-edit"></i></span></a>
+                        <a href="#" class="delete-btn"><span title="Transferir"><i class="fas fa-minus-circle"></i></span></a>
                     </th>
                 </tr>
                 {% endfor %}
