--- a/templates/agendamento/agendamento.html
+++ b/templates/agendamento/agendamento.html
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <fieldset class="col-lg">
                     <legend>Dados do agendamento</legend>
-                    <input id="cadastrado" type="checkbox" value="cadastrado">
+                    <input id="cadastrado" type="checkbox" value="" hidden>
                     <label id="msg" class="text-center alert alert-danger" style="display: none"></label>
                     <form method="post">
                         {% csrf_token %}
@@ -25,25 +25,31 @@
                                 {% render_field form.nome class+="form-control" list="pacientes" %}
                                 <datalist id="pacientes">
                                 </datalist>
-                                <a href="{% url 'pacientes:cadastro' %}" type="button" class="btn btn-primary ml-1">
+                            </div>
+                            <a href="{% url 'pacientes:cadastro' %}" type="button" class="btn btn-primary ml-1">
                                     Novo
                                 </a>
-                            </div>
+
                             <div class="input-group-prepend">
                                 <label for="{{form.profissional.id_for_label}}" class="input-group-text">
                                     {{ form.profissional.label }}</label>
                                 {% render_field form.profissional class+='form-control' disabled="disabled" %}
                             </div>
-                            <div class="input-group-prepend">
-                                <label for="{{form.data.id_for_label}}" class="input-group-text">
-                                    {{ form.data.label }}</label>
-                                {% render_field form.data class+='form-control' type='date' disabled="disabled" %}
-                                <a href="#" class="date-icon" title="Escolha uma data">data</a>
-                            </div>
-                            <div class="input-group-prepend">
+
+                             <div class="input-group-prepend">
                                 <label for="{{form.turno.id_for_label}}" class="input-group-text">
                                     {{ form.turno.label }}</label>
                                 {% render_field form.turno class+='form-control' disabled="disabled" %}
+                            </div>
+
+                            <div class="input-group-prepend">
+                                <label for="{{form.data.id_for_label}}" class="input-group-text">
+                                    {{ form.data.label }}</label>
+                                {% render_field form.data class+='form-control' disabled="disabled" %}
+                            </div>
+                            <div class="ml-1">
+                                <a href="#" type="button" class="btn btn-success"><i class="fa fa-calendar fa-3">
+                                    Data</i></a>
                             </div>
                         </div>
                         <div class="card-body" align="center">
