--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -19,6 +19,18 @@
                     </p>
                     <a href="{% url 'pacientes:consultar' %}" class="btn btn-primary">CONSULTAR</a>
                     <a href="{% url 'pacientes:cadastro_paciente' %}" class="btn btn-primary">ALTERAR/CADASTRAR</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">Cadastros das Família</h3>
+                </div>
+                <div class="card-body">
+                    <p>
+                        Faça aqui os cadastros ou aletrações de dados das Famílias.
+                    </p>
                     <a href="{% url 'pacientes:cadastro_familia' %}" class="btn btn-primary">FAMÍLIA</a>
                 </div>
             </div>
