--- a/templates/pacientes/consultar.html
+++ b/templates/pacientes/consultar.html
@@ -4,7 +4,7 @@
 {% block title %}UBS PINHO{% endblock %}
 
 {% block conteudo %}
-<div class="container mt-5 justify-content-md-center">
+<div class="container justify-content-md-center">
     <div class="card">
         <div class="card-header">
             <h6 class="card-title">Buscar Pacientes</h6>
