--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -26,9 +26,6 @@
 <body>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'home:index' %}">
-        <img src="{% static 'home/img/logo.jpg' %}" height="45px" alt="logo">
-    </a>
     <button class="navbar-toggler" type="button"
             data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -59,7 +56,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a href="{% url 'agendamento:agendar' %}" class="nav-link">Agendamentos</a>
+                <a href="{% url 'agendamento:index' %}" class="nav-link">Agendamentos</a>
             </li>
         </ul>
         <ul class="navbar-nav float-right">
