--- a/templates/agendamento/agendar.html
+++ b/templates/agendamento/agendar.html
@@ -15,11 +15,26 @@
                 <div class="card-body">
                     <fieldset class="col-lg">
                         <legend>Dados do agendamento</legend>
-                        <input id="cadastrado" type="checkbox">
-                        <label id="msg" class="text-center alert alert-danger" style="display: none"></label>
-                        <form method="post">
-                            {% csrf_token %}
-                            <div class="input-group">
+                        <div class="card" style="width: 18rem;">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    Profissional: {{profissional}}
+                                </li>
+
+                                <li class="list-group-item">
+                                    Turno: {{turno}}
+                                </li>
+
+                                <li class="list-group-item">
+                                    Data: {{data}}
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="input-group mt-2">
+                            <input id="cadastrado" type="checkbox" hidden>
+                            <label id="msg" class="text-center alert alert-danger" style="display: none"></label>
+                            <form method="post">
+                                {% csrf_token %}
                                 <div class="input-group-prepend">
                                     <label for="id_nome" class="input-group-text">
                                         Nome</label>
@@ -27,56 +42,19 @@
                                            required id="id_nome">
                                     <datalist id="pacientes">
                                     </datalist>
-                                </div>
-                                <a href="/pacientes/cadastro/" type="button" class="btn btn-secondary ml-1"
-                                   title="Cadastrar novo">
-                                    Novo
-                                </a>
-
-                                <div class="input-group-prepend">
-                                    <label for="id_profissional" class="input-group-text">
-                                        Profissional</label>
-                                    <select name="profissional" class="form-control" disabled="disabled" required
-                                            id="id_profissional">
-                                        {% if form.profissional.value == 'med' %}
-                                        <option value="{{form.profissional.value}}" selected>Médico(a)</option>
-                                        {% else %}
-                                        <option value="{{form.profissional.value}}" selected>Enfermeiro(a)</option>
-                                        {% endif %}
-
-                                    </select>
+                                    <a href="/pacientes/cadastro/" type="button" class="btn btn-secondary ml-1"
+                                       title="Cadastrar novo">
+                                        Novo
+                                    </a>
                                 </div>
 
-                                <div class="input-group-prepend">
-                                    <label for="id_turno" class="input-group-text">
-                                        Turno</label>
-                                    <select name="turno" class="form-control" disabled="disabled" required
-                                            id="id_turno">
-                                        {% if form.turno.value == 'M' %}
-                                        <option value="{{form.turno.value}}" selected>Manhã</option>
-                                        {% else %}
-                                        <option value="{{form.turno.value}}" selected>Tarde</option>
-                                        {% endif %}
-                                    </select>
+                                <div class="card-body" align="center">
+                                    <button id="botao_agendar" class="btn btn-primary">Agendar</button>
                                 </div>
-
-                                <div class="input-group-prepend">
-                                    <label for="id_data" class="input-group-text">
-                                        Data</label>
-                                    <input type="text" name="data" value="{{form.data.value}}" class="form-control"
-                                           disabled="disabled" required id="id_data">
-                                </div>
-                            </div>
-                            <div class="card-body" align="center">
-                                <button id="botao_agendar" class="btn btn-primary">Agendar</button>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </fieldset>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div id="calendario" class="calendar">
             </div>
         </div>
     </div>
