--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -35,6 +35,10 @@
                 </div>
             </div>
         </div>
+
+    </div>
+
+    <div class="row mt-2">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="card">
                 <div class="card-header">
