altercao das relaçoes

--- a/templates/agendamento/agendados.html
+++ b/templates/agendamento/agendados.html
@@ -1,33 +1,62 @@
 {% extends "layouts/base.html" %}
 {% load static %}
-{% load widget_tweaks %}
 
 {% block title %}UBS PINHO{% endblock %}
 
 {% block conteudo %}
     <div class="container">
+    <h1>Agenda do(a) {% if profissional == 'med' %}Médico(a){% else %}Enfermeiro(a){% endif %}</h1>
         <div class="row justify-content-md-center">
             <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-header">Agendados Manhã</div>
+                    <div class="card-body">
+                        <table id="tabela" class="table table-striped">
+                            <thead class="thead-dark">
+                            <tr>
+                                <th>N°</th>
+                                <th>Nome</th>
+                                <th>Família</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for paciente in manha %}
+                                <tr>
+                                    <th>{{ forloop.counter }}</th>
+                                    <th>{{ paciente.paciente }}</th>
+                                    <th>{{ paciente.paciente.familia }}</th>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
 
-                <table id="tabela" class="table table-striped">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>N°</th>
-                        <th>Nome</th>
-                        <th>Família</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for paciente in pacientes %}
-                        <tr>
-                            <th>{{ forloop.counter }}</th>
-                            <th>{{ paciente.nome }}</th>
-                            <th>{{ paciente.familia }}</th>
-                        </tr>
-                    {% endfor %}
-
-                    </tbody>
-                </table>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-header">Agendados Tarde</div>
+                    <div class="card-body">
+                        <table id="tabela" class="table table-striped">
+                            <thead class="thead-dark">
+                            <tr>
+                                <th>N°</th>
+                                <th>Nome</th>
+                                <th>Família</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for paciente in tarde %}
+                                <tr>
+                                    <th>{{ forloop.counter }}</th>
+                                    <th>{{ paciente.paciente }}</th>
+                                    <th>{{ paciente.paciente.familia }}</th>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
