--- a/templates/agendamento/index.html
+++ b/templates/agendamento/index.html
@@ -14,7 +14,7 @@
                     <p>
                         Faça aqui os agendamentos para Clínico Geral.
                     </p>
-                    <a href="{% url 'agendamento:calendario' 'med' %}" class="btn btn-primary">AGENDAR</a>
+                    <a href="{% url 'agendamento:calendario' 'med' mes ano %}" class="btn btn-primary">AGENDAR</a>
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
                     <p>
                         Faça aqui os agendamentos para Enfermagem.
                     </p>
-                    <a href="{% url 'agendamento:calendario' 'enf' %}" class="btn btn-primary">AGENDAR</a>
+                    <a href="{% url 'agendamento:calendario' 'enf' mes ano %}" class="btn btn-primary">AGENDAR</a>
                 </div>
             </div>
         </div>
