--- a/templates/pacientes/cadastro_paciente.html
+++ b/templates/pacientes/cadastro_paciente.html
@@ -1,6 +1,5 @@
 {% extends "layouts/base.html" %}
 {% load static %}
-{% load widget_tweaks %}
 
 {% block title %}UBS PINHO{% endblock %}
 
@@ -22,6 +21,7 @@
                     <input id="encontrado" type="checkbox" hidden>
                     <form method="post">
                         {% csrf_token %}
+                        <input type="number" name="chave" id="id_chave" hidden>
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <label for="id_sus" class="input-group-text">
