correcao de bugs

--- a/templates/pacientes/cadastro_paciente.html
+++ b/templates/pacientes/cadastro_paciente.html
@@ -51,7 +51,7 @@
                             <div class="input-group-prepend">
                                 <label for="id_familia" class="input-group-text">
                                     Familia</label>
-                                <input type="number" name="familia" min="0" class="form-control" id="id_familia">
+                                <input type="number" name="familia" min="0" class="form-control" id="id_familia" required>
                             </div>
 
                             <div class="input-group-prepend">
